* dir.c (replace_real_basename): shouldn't create Ruby object before   the object system is loaded.   [ruby-core:68430] [Bug #10941]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@49859 b2dd03c8-39d4-4d8f-98ff-823fe69b080e